# diagnostics

./: Cargo.toml
.github/workflows/: ci.yml
sigma-diagnostics/: Cargo.toml
sigma-diagnostics/src/: lib.rs
sigma-diagnostics/src/dto/: mod.rs
sigma-diagnostics/src/dto/dbc/: attribute_assignment_info.rs  attribute_default_info.rs  attribute_definition_info.rs  attribute_target_info.rs  attribute_value_info.rs  attribute_value_type.rs  bit_timing_info.rs  dbc_info.rs  extended_multiplexing_info.rs  message_info.rs  mod.rs  node_info.rs  signal_info.rs  signal_value_descriptions.rs  value_description_entry.rs
sigma-diagnostics/src/dto/frame/: can_bpf_filter.rs  can_error_dto.rs  can_frame_dto.rs  decode_response.rs  decoded_signal_dto.rs  mod.rs
sigma-diagnostics/src/dto/live/: capture_stats_dto.rs  dbc_message_row.rs  dbc_node_row.rs  dbc_signal_row.rs  frame_table_row.rs  live_capture_display.rs  live_capture_update.rs  live_error_row.rs  live_frame_row.rs  live_message_row.rs  live_signal_row.rs  mod.rs  signal_table_row.rs  stats_html.rs
sigma-diagnostics/src/vehicle/: mod.rs
sigma-diagnostics/src/vehicle/maintenance/: audit.rs  fetch.rs  mod.rs  orchestrate.rs  records.rs  report_md.rs  schedule_config.rs  wingman_db.rs
sigma-racer-mechanic/: Cargo.toml  build.rs
sigma-racer-mechanic/src/: about.rs  lib.rs  state.rs
sigma-racer-mechanic/ui/: app.slint
src/: dbc_export.rs  dto.rs  lib.rs  state.rs
src/app/: dbc.rs  helpers.rs  live.rs  mdf4.rs
src/commands/: filter.rs
src/services/: dbc.rs  mdf.rs
tests/: mdf4_integration.rs
(+12 files in other folders)
